Replace calls to deprecated Class#newInstance
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847964 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 431108bfb0f0c50cb7c6b5f606c17151afcedcae